--- a/src/styles/scss/_musicianList.scss
+++ b/src/styles/scss/_musicianList.scss
@@ -1,11 +1,12 @@
 .musician-list {
+  display: flex;
+  flex-direction: row;
   .nav {
     padding-top: 200px;
     width: 40vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    float: left;
     background-color: $background-color;
     height: 100vh;
 
@@ -109,7 +110,6 @@
 
   .main-container {
     width: 60vw;
-    float: right;
 
     height: 100vh;
     overflow: auto;
@@ -144,6 +144,7 @@
 }
 @include media-lgp {
   .musician-list {
+    flex-direction: column;
     .nav {
       padding-top: 90px;
       width: 100vw;
@@ -153,7 +154,7 @@
         font-size: 2.3rem;
         width: 50vw;
         margin-bottom: 30px;
-        //   text-align: center;
+
       }
 
       .toggle-filters {
@@ -168,7 +169,7 @@
 
     .main-container {
       width: 100vw;
-      float: left;
+      height: auto;
       .main {
         img {
           width: 33.33333vw;
