--- a/src/styles/scss/_ongoingProjects.scss
+++ b/src/styles/scss/_ongoingProjects.scss
@@ -237,6 +237,12 @@
           .title {
             margin-top: 5px;
             margin-bottom: 0px;
+
+            p{
+              white-space:normal;
+           
+            }
+           
           }
         }
       }
