--- a/src/styles/scss/_projectList.scss
+++ b/src/styles/scss/_projectList.scss
@@ -1,11 +1,13 @@
 .project-list {
+  display: flex;
+  flex-direction: row;
   .nav {
     padding-top: 200px;
     width: 40vw;
     display: flex;
     flex-direction: column;
     align-items: center;
-    float: left;
+    // float: left;
     background-color: $background-color;
     height: 100vh;
 
@@ -109,7 +111,7 @@
 
   .main-container {
     width: 60vw;
-    float: right;
+    // float: right;
 
     height: 100vh;
     overflow: auto;
@@ -123,8 +125,6 @@
         filter: grayscale(80%);
 
         &:hover {
-          height: 20vw;
-          width: 20vw;
           filter: grayscale(0%);
         }
       }
@@ -144,10 +144,15 @@
 }
 @include media-lgp {
   .project-list {
+    flex-direction: column;
+ 
     .nav {
       padding-top: 90px;
       width: 100vw;
       height: auto;
+      
+     
+  
 
       h2 {
         font-size: 2.3rem;
@@ -168,7 +173,8 @@
 
     .main-container {
       width: 100vw;
-      float: left;
+      height: auto;
+
       .main {
         img {
           width: 33.33333vw;
